--- a/src/main/resources/templates/users.html
+++ b/src/main/resources/templates/users.html
@@ -10,6 +10,11 @@
 <div class="container">
     <div class="row">
         <h1 th:text="'Users list'">asdf</h1>
+    </div>
+    <div class="row mb-3">
+        <a class="btn btn-primary" th:href="@{/users/new}">Add new user</a>
+    </div>
+    <div class="row">
         <table class="table table-striped">
             <thead class="thead-dark">
             <tr>
