--- a/src/main/resources/templates/users.html
+++ b/src/main/resources/templates/users.html
@@ -23,6 +23,8 @@
                 <th scope="col">Username</th>
                 <th scope="col">Gender</th>
                 <th scope="col">DoB</th>
+                <th scope="col">PWHash</th>
+                <th scope="col">Actions</th>
 
             </tr>
             </thead>
@@ -32,8 +34,9 @@
                 <td th:text ="${user.lastName}"></td>
                 <td th:text ="${user.username}"></td>
                 <td th:text ="${user.gender}"></td>
-                <!--<td th:text ="${student?.dateOfBirth}"></td>-->
-                <td th:text ="${user?.passwordHash}"></td>
+                <td th:text ="${user.dateOfBirth}"></td>
+                <td th:text ="${user.passwordHash}"></td>
+                <td><a class="btn btn-primary" th:href="@{/users/edit/{id}(id=${user.id})}">Edit</a></td>
             </tr>
             </tbody>
         </table>
