--- a/src/main/resources/templates/create_user.html
+++ b/src/main/resources/templates/create_user.html
@@ -28,17 +28,22 @@
                     </div>
                     <div class="form-group">
                         <label> Gender</label>
-                        <input type="text" name="lastName" th:field="*{gender}" class="form-control"
+                        <input type="text" name="gender" th:field="*{gender}" class="form-control"
                                placeholder="Enter Gender"/>
                     </div>
                     <div class="form-group">
                         <label> Username</label>
-                        <input type="text" name="lastName" th:field="*{username}" class="form-control"
+                        <input type="text" name="username" th:field="*{username}" class="form-control"
                                placeholder="Enter Username"/>
                     </div>
                     <div class="form-group">
+                        <label> E-mail</label>
+                        <input type="text" name="email" th:field="*{email}" class="form-control"
+                               placeholder="Enter email"/>
+                    </div>
+                    <div class="form-group">
                         <label> Date of birth</label>
-                        <input type="text" name="lastName" th:field="*{dateOfBirth}" class="form-control"
+                        <input type="text" name="dateOfBirth" th:field="*{dateOfBirth}" class="form-control"
                                placeholder="Enter Date of birth"/>
                     </div>
                     <div class="form-group">
