--- a/src/main/resources/templates/edit_user.html
+++ b/src/main/resources/templates/edit_user.html
@@ -12,9 +12,9 @@
 <div class="container">
     <div class="row">
         <div class="col-lg-6 col-md-6 col-sm-6 container justify-content-center card">
-            <h1 class="text-center"> Create New User </h1>
+            <h1 class="text-center"> Update User </h1>
             <div class="card-body">
-                <form th:action="@{/users}" th:object="${user}" method="POST">
+                <form th:action="@{/users/edit/{id}(id = ${user.id})}" th:object="${user}" method="POST">
                     <div class="form-group">
                         <label>First Name </label>
                         <input type="text" name="firstName" th:field="*{firstName}" class="form-control"
@@ -28,22 +28,22 @@
                     </div>
                     <div class="form-group">
                         <label> Gender</label>
-                        <input type="text" name="gender" th:field="*{gender}" class="form-control"
+                        <input type="text" name="lastName" th:field="*{gender}" class="form-control"
                                placeholder="Enter Gender"/>
                     </div>
                     <div class="form-group">
                         <label> Username</label>
-                        <input type="text" name="username" th:field="*{username}" class="form-control"
+                        <input type="text" name="lastName" th:field="*{username}" class="form-control"
                                placeholder="Enter Username"/>
                     </div>
                     <div class="form-group">
-                        <label> E-mail</label>
+                        <label> Email</label>
                         <input type="text" name="email" th:field="*{email}" class="form-control"
-                               placeholder="Enter email"/>
+                               placeholder="Enter Email"/>
                     </div>
                     <div class="form-group">
                         <label> Date of birth</label>
-                        <input type="text" name="dateOfBirth" th:field="*{dateOfBirth}" class="form-control"
+                        <input type="text" name="lastName" th:field="*{dateOfBirth}" class="form-control"
                                placeholder="Enter Date of birth"/>
                     </div>
                     <div class="form-group">
