--- a/src/main/resources/templates/users.html
+++ b/src/main/resources/templates/users.html
@@ -10,6 +10,11 @@
 <div class="container">
     <div class="row">
         <h1 th:text="'Users list'">asdf</h1>
+    </div>
+    <div class="row mb-3">
+        <a class="btn btn-primary" th:href="@{/users/new}">Add new user</a>
+    </div>
+    <div class="row">
         <table class="table table-striped">
             <thead class="thead-dark">
             <tr>
@@ -18,6 +23,8 @@
                 <th scope="col">Username</th>
                 <th scope="col">Gender</th>
                 <th scope="col">DoB</th>
+                <th scope="col">PWHash</th>
+                <th scope="col">Actions</th>
 
             </tr>
             </thead>
@@ -27,8 +34,12 @@
                 <td th:text ="${user.lastName}"></td>
                 <td th:text ="${user.username}"></td>
                 <td th:text ="${user.gender}"></td>
-                <!--<td th:text ="${student?.dateOfBirth}"></td>-->
-                <td th:text ="${user?.passwordHash}"></td>
+                <td th:text ="${user.dateOfBirth}"></td>
+                <td th:text ="${user.passwordHash}"></td>
+                <td>
+                    <a class="btn btn-primary" th:href="@{/users/edit/{id}(id=${user.id})}">Edit</a>
+                    <a class="btn btn-danger" th:href="@{/users/delete/{id}(id=${user.id})}">Delete</a>
+                </td>
             </tr>
             </tbody>
         </table>
