--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -14,8 +14,8 @@
 
 <nav class="navbar navbar-dark bg-dark">
     <a class="navbar-brand text-white" href="#">
-        <img src="../static/yes-you-can.png" width="30" height="30" class="d-inline-block align-top" alt="">
-        Bootstrap
+        <img src="/yes-you-can.png" width="50" height="50" class="d-inline-block align-top" alt="">
+        UCan
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
