--- a/src/main/resources/templates/category/categories.html
+++ b/src/main/resources/templates/category/categories.html
@@ -7,6 +7,7 @@
           integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
 </head>
 <body>
+<div th:insert="navbar :: navbar">  </div>
 <div class="container">
     <div class="row">
         <h1 th:text="'Categories list'">asdf</h1>
