--- a/src/main/resources/templates/users/edit_user.html
+++ b/src/main/resources/templates/users/edit_user.html
@@ -9,6 +9,7 @@
           crossorigin="anonymous">
 </head>
 <body>
+<div th:insert="navbar :: navbar">  </div>
 <div class="container">
     <div class="row">
         <div class="col-lg-6 col-md-6 col-sm-6 container justify-content-center card">
