--- a/src/main/resources/templates/authors/create_author.html
+++ b/src/main/resources/templates/authors/create_author.html
@@ -27,7 +27,7 @@
                    placeholder="Enter Last Name"/>
           </div>
           <div class="form-group">
-            <label> Gender</label>
+            <label>Biography</label>
             <input type="text" name="biography" th:field="*{biography}" class="form-control"
                    placeholder="Enter Gender"/>
           </div>
