Added Quote of the day api

--- a/src/main/resources/templates/navbar.html
+++ b/src/main/resources/templates/navbar.html
@@ -29,6 +29,7 @@
           <a class="dropdown-item" th:href="@{/users}">User</a>
           <a class="dropdown-item" th:href="@{/authors}">Author</a>
           <a class="dropdown-item" th:href="@{/categories}">Category</a>
+          <a class="dropdown-item" th:href="@{/quotes}">Quote</a>
         </div>
       </li>
       <li class="nav-item active" sec:authorize="isAuthenticated()">
