--- a/src/main/resources/templates/quote/qotd.html
+++ b/src/main/resources/templates/quote/qotd.html
@@ -5,6 +5,20 @@
     <title>Title</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
           integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
+    <link rel="stylesheet" href="/css/stylesheet.css">
+    <script src="https://kit.fontawesome.com/e6d5f02f54.js" crossorigin="anonymous"></script>
+
+    <style>
+        .fa {
+          font-size: 50px;
+          cursor: pointer;
+          user-select: none;
+        }
+
+        .fa:hover {
+          color: red;
+        }
+    </style>
 </head>
 <body>
 <div th:insert="navbar :: navbar"></div>
@@ -15,6 +29,43 @@
             <span th:text="${quote.text}"></span>
             <span th:text="${quote.category.name}"></span>
         </p>
+    </div>
+</div>
+
+<div class="container">
+    <section class="mx-auto my-5" style="max-width: 23rem;">
+
+        <div class="card">
+            <div class="card-body">
+                <blockquote class="blockquote blockquote-custom bg-white px-3 pt-4">
+                    <div class="blockquote-custom-icon bg-info shadow-1-strong">
+                        <i class="fa fa-quote-left text-white"></i>
+                    </div>
+                    <p class="mb-0 mt-2 font-italic" th:text="${quote.text}">
+                        "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                        incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
+                        exercitation ullamco laboris nisi ut aliquip ex ea commodo."
+                    </p>
+                    <footer class="blockquote-footer pt-4 mt-4 border-top">
+                        Someone famous in
+                        <cite title="Source Title" th:text="${quote.author.firstName}">Source Title</cite>
+                        <cite title="Source Title" th:text="${quote.author.lastName}">Source Title</cite>
+                    </footer>
+                </blockquote>
+
+            </div>
+        </div>
+
+    </section>
+
+    <div>
+        <i onclick="myFunction(this)" class="fa fa-regular fa-heart"></i>
+
+        <script>
+                    function myFunction(x) {
+                        x.classList.toggle("fa-solid fa-heart");
+                    }
+                </script>
     </div>
 </div>
 
