Implemented like feature

--- a/src/main/resources/templates/quote/qotd.html
+++ b/src/main/resources/templates/quote/qotd.html
@@ -38,8 +38,12 @@ function myFunction(x) {
                                 <span th:text="${quote.author.firstName}">Thomas</span>
                                 <span th:text="${quote.author.lastName}">Thomas</span>
                             </p>
-                            <h6 class="mb-0"><span class="badge rounded-pill"
-                                                   style="background-color: rgba(0,0,0, 0.2);">876</span> <i onclick="myFunction(this)" class="fa fa-heart-o ms-2"></i>
+
+                                <form name="likeForm" th:action="@{/quotes/like}" method="post">
+                                    <h6 class="mb-0"><span class="badge rounded-pill"
+                                                           style="background-color: rgba(0,0,0, 0.2);">876</span>
+                                    <i onclick="likeForm.submit(); myFunction(this);" class="fa fa-heart-o ms-2"></i>
+                                </form>
                             </h6>
                         </div>
 
