--- a/src/main/resources/templates/auth/registration.html
+++ b/src/main/resources/templates/auth/registration.html
@@ -6,6 +6,13 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
+          integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
+    <link rel="stylesheet" href="/css/stylesheet.css">
+    <link th:rel="stylesheet" th:href="@{assets/bootstrap-datepicker/css/bootstrap-datepicker.css}"/>
+    <link th:rel="stylesheet" th:href="@{assets/bootstrap-datepicker/css/bootstrap-datepicker.standalone.css}"/>
+    <link th:rel="stylesheet" th:href="@{webjars/font-awesome/5.11.2/css/all.css} "/>
+    <script src="https://kit.fontawesome.com/e6d5f02f54.js" crossorigin="anonymous"></script>
 
     <title>Hello, world!</title>
 </head>
@@ -45,10 +52,16 @@
                     <input type="text" name="email" th:field="*{email}" class="form-control"
                            placeholder="Enter Email" required autofocus="autofocus"/>
                 </div>
-                <div class="form-group">
-                    <label> Date of birth</label>
-                    <input type="text" name="lastName" th:field="*{dateOfBirth}" class="form-control"
-                           placeholder="Enter Date of birth" required autofocus="autofocus"/>
+                <div class="form-group row">
+                    <div class="col-md-4 mt-5">
+                        <label for="birthdate">Date of birth</label>
+                        <div class="input-group date">
+                            <input type="text" class="form-control" id="birthdate" autocomplete="off" th:field="*{dateOfBirth}"/>
+                            <div class="input-group-append">
+                                <span class="input-group-text"><i class="far fa-calendar-alt"></i></span>
+                            </div>
+                        </div>
+                    </div>
                 </div>
                 <div class="form-group">
                     <label>Password hash</label>
@@ -65,6 +78,17 @@
     </div>
 </div>
 
+<script th:src="@{/webjars/jquery/jquery.min.js}"></script>
+<script th:src="@{/webjars/popper.js/umd/popper.min.js}"></script>
+<script th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>
+<script th:src="@{assets/bootstrap-datepicker/js/bootstrap-datepicker.js}"></script>
+
+<script>
+    $('.input-group.date').datepicker({
+        autoclose: true,
+        todayHighlight: true
+    });
+</script>
 
 </body>
 </html>
