--- a/src/main/resources/templates/quote/quotes.html
+++ b/src/main/resources/templates/quote/quotes.html
@@ -10,6 +10,9 @@
 <div th:insert="navbar :: navbar"></div>
 
 <div class="container">
+    <div class="row mb-3">
+        <a class="btn btn-primary" th:href="@{/quotes/new}">Add new Quote</a>
+    </div>
     <div class="row">
         <table class="table table-striped">
             <thead class="thead-dark">
